--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,44 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+# Maven Release Plugin
+release.properties
+pom.xml.releaseBackup
+pom.xml.tag
+pom.xml.next
+pom.xml.backup
+
 # ===========================
 # IDE - VS Code
 # ===========================
 .vscode/
 *.code-workspace
+
+# ===========================
+# IDE - IntelliJ IDEA
+# ===========================
+.idea/
+*.iml
+*.iws
+*.ipr
+out/
+
+# ===========================
+# IDE - Eclipse
+# ===========================
+.project
+.classpath
+.settings/
+*.launch
+.factorypath
+
+# ===========================
+# IDE - NetBeans
+# ===========================
+nbproject/
+nb-configuration.xml
+nbbuild/
+nbdist/
 
 # ===========================
 # OS Generated Files
@@ -51,9 +84,11 @@ replay_pid*
 .env
 .env.local
 .env.*.local
-!.env.example
 application-local.properties
 application-local.yml
+application-*.local.properties
+application-*.local.yml
+!.env.example
 
 # ===========================
 # Spring Boot
@@ -80,9 +115,11 @@ jacoco.exec
 *.temp
 *.swp
 *~
+*.bak
+*.old
+*.orig
 
 # ===========================
 # MapStruct Generated Sources
 # ===========================
 # (Keep these in target/, already ignored)
-
