fix: build pipeline exclude surefire and include failsafe tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,7 +100,7 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Run Integration Tests
-        run: mvn verify -B -DskipUnitTests -Pfailsafe
+        run: mvn verify -B -DskipTests
         env:
           TESTCONTAINERS_RYUK_DISABLED: 'true'
 
